{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 625,
  "lineage": "abadf1c9-4a7d-93d5-aaab-7fd79246cee0",
  "resources": [
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:security-group/sg-0938a46646c47c370",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08044feb222961305"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08044feb222961305"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-0938a46646c47c370",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08044feb222961305"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aws006-preprod-test-eks-cluster-20220627204155895100000002",
            "name_prefix": "aws006-preprod-test-eks-cluster-",
            "owner_id": "349361870252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-cluster"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:security-group/sg-08044feb222961305",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0938a46646c47c370"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-08044feb222961305",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0938a46646c47c370"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0938a46646c47c370"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "aws006-preprod-test-eks-node-20220627204155878200000001",
            "name_prefix": "aws006-preprod-test-eks-node-",
            "owner_id": "349361870252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-node",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "owned"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-node",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3583579307",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0938a46646c47c370",
            "self": false,
            "source_security_group_id": "sg-08044feb222961305",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1766591148",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0938a46646c47c370",
            "self": false,
            "source_security_group_id": "sg-08044feb222961305",
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1421331017",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0938a46646c47c370",
            "self": false,
            "source_security_group_id": "sg-08044feb222961305",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2115837467",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08044feb222961305",
            "self": false,
            "source_security_group_id": "sg-0938a46646c47c370",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-2315859217",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08044feb222961305",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-1440155663",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08044feb222961305",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-726215938",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-08044feb222961305",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3519323362",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08044feb222961305",
            "self": true,
            "source_security_group_id": "sg-08044feb222961305",
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1604525700",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-08044feb222961305",
            "self": true,
            "source_security_group_id": "sg-08044feb222961305",
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3168211098",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08044feb222961305",
            "self": false,
            "source_security_group_id": "sg-0938a46646c47c370",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-602402842",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08044feb222961305",
            "self": false,
            "source_security_group_id": "sg-0938a46646c47c370",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1538486005",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08044feb222961305",
            "self": true,
            "source_security_group_id": "sg-08044feb222961305",
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4293709082",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-08044feb222961305",
            "self": true,
            "source_security_group_id": "sg-08044feb222961305",
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints_kubernetes_addons.module.argocd[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "8567",
                "uid": "df435a52-3e0d-4190-ab97-cdcf20b9a51e"
              }
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster_auth.this",
            "module.eks_blueprints.data.aws_caller_identity.current",
            "module.eks_blueprints.data.aws_eks_cluster.cluster",
            "module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.eks_blueprints.data.aws_iam_session_context.current",
            "module.eks_blueprints.data.aws_partition.current",
            "module.eks_blueprints.data.aws_region.current",
            "module.eks_blueprints.data.http.eks_cluster_readiness",
            "module.eks_blueprints.kubernetes_config_map.aws_auth",
            "module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.aws_eks_fargate_profile.eks_fargate",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.aws_iam_policy.cwlogs",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.aws_iam_role.fargate",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.cwlogs",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.fargate_pod_execution_role_policy",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.cwlogs",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.fargate_assume_role_policy",
            "module.eks_blueprints.module.kms.aws_kms_key.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "null_resource.modify_kube_dns",
            "null_resource.remove_default_coredns_deployment"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:network-acl/acl-0ad82ccc92c66aa2a",
            "default_network_acl_id": "acl-0ad82ccc92c66aa2a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ad82ccc92c66aa2a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "349361870252",
            "subnet_ids": [
              "subnet-01c60c124a4787c29",
              "subnet-054eeb64d60dbd012",
              "subnet-0630d189709033887",
              "subnet-08220d01a5fe27422",
              "subnet-0916912fd5f4f8fe6",
              "subnet-0aefbea492578a054"
            ],
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-default"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-default"
            },
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:route-table/rtb-09e0319324e711ee8",
            "default_route_table_id": "rtb-09e0319324e711ee8",
            "id": "rtb-09e0319324e711ee8",
            "owner_id": "349361870252",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-default"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:security-group/sg-0cc21f1ec870da227",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0cc21f1ec870da227",
            "ingress": [],
            "name": "default",
            "owner_id": "349361870252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-default"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-default"
            },
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02127370e5587d61f",
            "association_id": "eipassoc-0bb18faaff946041e",
            "domain": "vpc",
            "id": "eipalloc-02127370e5587d61f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c013f4b9e4039bdc",
            "private_dns": "ip-10-0-0-140.ec2.internal",
            "private_ip": "10.0.0.140",
            "public_dns": "ec2-44-207-187-4.compute-1.amazonaws.com",
            "public_ip": "44.207.187.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-us-east-1a"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:internet-gateway/igw-006667f016c543031",
            "id": "igw-006667f016c543031",
            "owner_id": "349361870252",
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks"
            },
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02127370e5587d61f",
            "connectivity_type": "public",
            "id": "nat-08d88420546394a1a",
            "network_interface_id": "eni-0c013f4b9e4039bdc",
            "private_ip": "10.0.0.140",
            "public_ip": "44.207.187.4",
            "subnet_id": "subnet-054eeb64d60dbd012",
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-us-east-1a"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-us-east-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0160d02e3734385521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08d88420546394a1a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0160d02e373438552",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-006667f016c543031",
            "id": "r-rtb-00d10e1e52703f8e51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00d10e1e52703f8e5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:route-table/rtb-0160d02e373438552",
            "id": "rtb-0160d02e373438552",
            "owner_id": "349361870252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d88420546394a1a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-private"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:route-table/rtb-00d10e1e52703f8e5",
            "id": "rtb-00d10e1e52703f8e5",
            "owner_id": "349361870252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006667f016c543031",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-public"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e5335e97a4ac3eb",
            "route_table_id": "rtb-0160d02e373438552",
            "subnet_id": "subnet-01c60c124a4787c29"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae66e7435aa2034c",
            "route_table_id": "rtb-0160d02e373438552",
            "subnet_id": "subnet-08220d01a5fe27422"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc09e1890f210ed2",
            "route_table_id": "rtb-0160d02e373438552",
            "subnet_id": "subnet-0aefbea492578a054"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ef84ac07a3ca7f8",
            "route_table_id": "rtb-00d10e1e52703f8e5",
            "subnet_id": "subnet-054eeb64d60dbd012"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e75fa29a7221903e",
            "route_table_id": "rtb-00d10e1e52703f8e5",
            "subnet_id": "subnet-0630d189709033887"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0440ec099add18cb7",
            "route_table_id": "rtb-00d10e1e52703f8e5",
            "subnet_id": "subnet-0916912fd5f4f8fe6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:subnet/subnet-01c60c124a4787c29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c60c124a4787c29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349361870252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-private-us-east-1a",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-private-us-east-1a",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:subnet/subnet-08220d01a5fe27422",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08220d01a5fe27422",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349361870252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-private-us-east-1b",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-private-us-east-1b",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:subnet/subnet-0aefbea492578a054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aefbea492578a054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349361870252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-private-us-east-1c",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-private-us-east-1c",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:subnet/subnet-054eeb64d60dbd012",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054eeb64d60dbd012",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "349361870252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-public-us-east-1a",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-public-us-east-1a",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:subnet/subnet-0630d189709033887",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0630d189709033887",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "349361870252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-public-us-east-1b",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-public-us-east-1b",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:subnet/subnet-0916912fd5f4f8fe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0916912fd5f4f8fe6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "349361870252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-public-us-east-1c",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks-public-us-east-1c",
              "kubernetes.io/cluster/aws006-preprod-test-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03e3acb23d14eb252"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349361870252:vpc/vpc-03e3acb23d14eb252",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad82ccc92c66aa2a",
            "default_route_table_id": "rtb-09e0319324e711ee8",
            "default_security_group_id": "sg-0cc21f1ec870da227",
            "dhcp_options_id": "dopt-09718bce39fc9d273",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03e3acb23d14eb252",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e0319324e711ee8",
            "owner_id": "349361870252",
            "tags": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks"
            },
            "tags_all": {
              "Blueprint": "aws006-preprod-test-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "aws006-preprod-test-eks"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}